<?xml version="1.0"?>
<package format="2">
  <name>dstar_planner</name>
  <version>0.0.0</version>
  <description>The dstar_planner package</description>

  <maintainer email="ma@todo.todo">ma</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>
    <depend>costmap_2d</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_core</depend>
    <depend>navfn</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>base_local_planner</depend>
    <depend>roscpp</depend>
    <depend>tf2_ros</depend>
    <depend>tf2</depend>

  <export>
    <nav_core plugin="${prefix}/dspl_plugin.xml" />
  </export>
  
  
</package>
